--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script>
+        window.MathJax = {
+            tex: {
+                inlineMath: [['\\(', '\\)'], ['[', ']'], ['(', ')']],  // tambahkan ['(', ')']
+                displayMath: [['\\[', '\\]'], ['[', ']']],
+                packages: {'[+]': ['ams']},
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
+                ignoreHtmlClass: 'no-mathjax',
+            }
+        };
+    </script>
     <style>
         ::-webkit-scrollbar {
             width: 7px;
