--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
             <div class="mb-6 flex items-center justify-between">
                 <h2 class="text-xl font-bold text-white">
                     <i class="fas fa-chart-line mr-2"></i>
-                    Results ({{ v_responses.length }})
+                    Results {{ v_responses.length }}
                 </h2>
                 <div class="space-x-3" v-if="v_responses.length > 0 && !v_processing">
                     <button @click="f_upload_data" 
@@ -235,11 +235,8 @@
                 <p>Submit a request to see results here</p>
             </div>
 
-            <div class="grid gap-6">
-                <div v-for="(response, index) in v_responses" 
-                     :key="index"
-                     class="response-card glass-effect rounded-2xl p-6 shadow-xl">
-                    
+            <div class="grid gap-6 overflow-hidden">
+                <div v-for="(response, index) in v_responses" :key="index" class="response-card glass-effect rounded-2xl p-6 shadow-xl w-full overflow-hidden">
                     <!-- Header -->
                     <div class="flex items-center justify-between mb-4 pb-4 border-b border-white/20">
                         <div class="flex items-center space-x-3">
@@ -249,32 +246,36 @@
                             <div class="text-purple-200 text-sm space-y-1">
                                 <h3 class="text-white font-semibold">Response #{{ index + 1 }}</h3>
                                 <div>
+                                    <i class="fas fa-robot mr-1 text-purple-300"></i>
+                                    <b>Model:</b> {{ response.model_name }}
+                                </div>
+                                <div>
                                     <i class="fas fa-clock mr-1 text-yellow-300"></i>
-                                    Total Time: {{ (response.total_duration / 1_000_000_000).toFixed(2) }} seconds
+                                    <b>Total Time:</b> {{ (response.total_duration / 1_000_000_000).toFixed(2) }} seconds
                                 </div>
                                 <div>
                                     <i class="fas fa-download mr-1 text-blue-300"></i>
-                                    Loading Time: {{ (response.load_duration / 1_000_000_000).toFixed(2) }} seconds
+                                    <b>Loading Time:</b> {{ (response.load_duration / 1_000_000_000).toFixed(2) }} seconds
                                 </div>
                                 <div>
                                     <i class="fas fa-terminal mr-1 text-green-300"></i>
-                                    Input Sections Checked: {{ response.prompt_eval_count }}
+                                    <b>Input Sections Checked:</b> {{ response.prompt_eval_count }}
                                 </div>
                                 <div>
                                     <i class="fas fa-hourglass-half mr-1 text-green-300"></i>
-                                    Time Checking Input: {{ (response.prompt_eval_duration / 1_000_000_000).toFixed(2) }} seconds
+                                    <b>Time Checking Input:</b> {{ (response.prompt_eval_duration / 1_000_000_000).toFixed(2) }} seconds
                                 </div>
                                 <div>
                                     <i class="fas fa-check-double mr-1 text-pink-300"></i>
-                                    Total Tokens Processed: {{ response.eval_count }}
+                                    <b>Total Tokens Processed:</b> {{ response.eval_count }}
                                 </div>
                                 <div>
                                     <i class="fas fa-stopwatch mr-1 text-pink-300"></i>
-                                    Time Processing Tokens: {{ (response.eval_duration / 1_000_000_000).toFixed(2) }} seconds
+                                    <b>Time Processing Tokens:</b> {{ (response.eval_duration / 1_000_000_000).toFixed(2) }} seconds
                                 </div>
                                 <div>
                                     <i class="fas fa-tachometer-alt mr-1 text-cyan-300"></i>
-                                    Speed: {{
+                                    <b>Speed:</b> {{
                                         (response.eval_count / (response.eval_duration / 1_000_000_000)).toFixed(1)
                                     }} tokens/sec
                                 </div>
@@ -301,13 +302,13 @@
                             <h4 class="text-purple-300 font-semibold flex items-center">
                                 <i class="fas fa-brain mr-2"></i>Thinking Process
                             </h4>
-                            <button @click="response.showFullThinking = !response.showFullThinking"
+                            <button @click="response.show_full_thinking = !response.show_full_thinking"
                                     class="text-purple-300 hover:text-purple-100 transition-colors">
-                                <i :class="response.showFullThinking ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
+                                <i :class="response.show_full_thinking ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
                             </button>
                         </div>
-                        <div :class="response.showFullThinking ? '' : 'thinking-collapsed'"
-                             class="bg-black/20 rounded-lg p-4">
+                        <div :class="response.show_full_thinking ? '' : 'thinking-collapsed'"
+                             class="bg-black/20 rounded-lg p-4 overflow-x-auto">
                             <div v-html="f_render_markdown(response.think || 'No thinking process available')" 
                                  class="text-white/80 prose prose-invert max-w-none"></div>
                         </div>
@@ -318,7 +319,7 @@
                         <h4 class="text-green-300 font-semibold mb-3 flex items-center">
                             <i class="fas fa-check-circle mr-2"></i>Final Response
                         </h4>
-                        <div class="bg-black/20 rounded-lg p-4">
+                        <div class="bg-black/20 rounded-lg p-4 overflow-x-auto">
                             <div v-html="f_render_markdown(response.final || 'No final response available')" 
                                  class="text-white prose prose-invert max-w-none"></div>
                         </div>
