--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             {{ v_info || 'Ready to process your requests' }}
         </div>
         <!-- Left Panel - Control Panel -->
-        <div class="w-1/3 p-6 glass-effect m-4 rounded-2xl shadow-2xl overflow-y-auto">
+        <div class="w-1/3 p-6 glass-effect m-4 rounded-2xl shadow-2xl overflow-y-auto no-mathjax">
             <div class="mb-8">
                 <h1 class="text-2xl font-bold text-white mb-2 flex items-center">
                     <i class="fas fa-robot mr-3 text-purple-300"></i>
@@ -239,7 +239,7 @@
                 <div v-for="(response, index) in v_responses" :key="index" class="response-card glass-effect rounded-2xl p-6 shadow-xl w-full overflow-hidden">
                     <!-- Header -->
                     <div class="flex items-center justify-between mb-4 pb-4 border-b border-white/20">
-                        <div class="flex items-center space-x-3">
+                        <div class="flex items-center space-x-3 no-mathjax">
                             <div class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold">
                                 {{ index + 1 }}
                             </div>
@@ -283,7 +283,7 @@
                         </div>
                         
                         <!-- Score Input -->
-                        <div class="flex items-center space-x-3">
+                        <div class="flex items-center space-x-3 no-mathjax">
                             <div class="flex items-center space-x-2">
                                 <i class="fas fa-star text-yellow-400"></i>
                                 <input type="number" 
