--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -267,7 +267,7 @@
                                     Categories Database
                                 </h3>
                             </div>
-                            <div class="table-container">
+                            <div class="table-container overflow-scroll">
                                 <table class="w-full" v-if="v_categories.length > 0">
                                     <thead class="sticky top-0">
                                         <tr>
@@ -373,7 +373,7 @@
                                     Models Database
                                 </h3>
                             </div>
-                            <div class="table-container">
+                            <div class="table-container overflow-scroll">
                                 <table class="w-full" v-if="v_models.length > 0">
                                     <thead class="sticky top-0">
                                         <tr>
@@ -456,7 +456,7 @@
                                     Inputs Database
                                 </h3>
                             </div>
-                            <div class="table-container">
+                            <div class="table-container overflow-scroll">
                                 <table class="w-full" v-if="v_inputs.length > 0">
                                     <thead class="sticky top-0">
                                         <tr>
@@ -539,7 +539,7 @@
                                     Outputs Database
                                 </h3>
                             </div>
-                            <div class="table-container">
+                            <div class="table-container overflow-scroll">
                                 <table class="w-full" v-if="v_outputs.length > 0">
                                     <thead class="sticky top-0">
                                         <tr>
@@ -683,7 +683,7 @@ SELECT * FROM t_output;"
                                     Query Results
                                 </h3>
                             </div>
-                            <div class="table-container">
+                            <div class="table-container overflow-scroll">
                                 <table v-if="v_hub_sql.length > 0" class="w-full">
                                     <thead class="sticky top-0">
                                         <tr>
